# scopehal-apps

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build-ubuntu.yml  build-windows.yml  build.yml
msys2/: PKGBUILD  mingw-w64-scopehal-apps-0.0.0.r1611.g2c4fb0a-1-x86_64-pkgver.log.1  mingw-w64-scopehal-apps-0.0.0.r1634.g4155882-1-x86_64-build.log.1  mingw-w64-scopehal-apps-0.0.0.r1634.g4155882-1-x86_64-build.log.2  mingw-w64-scopehal-apps-0.0.0.r1634.g4155882-1-x86_64-build.log.4  mingw-w64-scopehal-apps-0.0.0.r1634.g4155882-1-x86_64-pkgver.log.3
src/glscopeclient/: main.cpp
src/ngscopeclient/: AcceleratorBuffer.h  CMakeLists.txt  VulkanFFTPlan.h  VulkanWindow.cpp  main.cpp  scopehal.cpp  scopehal.h  vcpkg.json
src/ngscopeclient/log/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  log.h  log.vcxproj  log.vcxproj.filters
src/ngscopeclient/log/log.dir/Debug/: log.dll.recipe  log.ilk
src/ngscopeclient/log/log.dir/Debug/log.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  log.lastbuildstate
src/thunderscope-driver/: CMakeLists.txt  LiteXOscilloscope.cpp  LiteXOscilloscope.h  PluginInit.cpp  PluginInit.h  SCPILitePCIeTransport.cpp  SCPILitePCIeTransport.h  thunderscope-driver-version.h.in
